// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-headline> Component Sizes at all varient font styles: large, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: large, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: medium, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: medium, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: small, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: small, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xsmall, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xsmall, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxsmall, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxsmall, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxxlarge, italic 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font styles: xxxlarge, normal 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: large, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--large">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: medium, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--medium">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: small, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--small c-bolt-headline--uppercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xsmall, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxsmall, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxsmall">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, bold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, regular 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--regular c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component Sizes at all varient font weights: xxxlarge, semibold 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--semibold c-bolt-headline--xxxlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component basic usage eyebrow 1`] = `
<p class="c-bolt-eyebrow c-bolt-eyebrow--regular">
  this is an eyebrow
</p>
`;

exports[`<bolt-headline> Component basic usage headline 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  this is a headline
</h2>
`;

exports[`<bolt-headline> Component basic usage headline with attributes 1`] = `
<h2 foo
    bar="baz"
    class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge"
>
  this is a headline
</h2>
`;

exports[`<bolt-headline> Component basic usage lead 1`] = `
<p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--large">
  this is a lead
</p>
`;

exports[`<bolt-headline> Component basic usage subheadline 1`] = `
<p class="c-bolt-subheadline c-bolt-subheadline--regular c-bolt-subheadline--xlarge">
  this is an subheadline
</p>
`;

exports[`<bolt-headline> Component basic usage text 1`] = `
<p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
  this is text
</p>
`;

exports[`<bolt-headline> Component headline with associated link 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--link">
  <bolt-link display="inline"
             valign="center"
             url="www.testurl.com"
             is-headline="true"
  >
    <a href="www.testurl.com"
       is="shadow-root"
       class="c-bolt-link c-bolt-link--headline c-bolt-link--display-inline c-bolt-link--valign-center"
    >
      <replace-with-children class="c-bolt-link__text">
        this is a headline
      </replace-with-children>
      <replace-with-children class="c-bolt-link__icon">
        <bolt-icon slot="after"
                   name="chevron-right"
        >
          <span class="c-bolt-icon c-bolt-icon--chevron-right">
            <svg class="c-bolt-icon__icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
            >
              <path fill="var(--bolt-icon-primary-color)"
                    fill-rule="evenodd"
                    d="M12.938 7.054a1.34 1.34 0 00-1.884 0 1.339 1.339 0 000 1.884l7.059 7.06-7.059 7.059a1.34 1.34 0 000 1.884 1.329 1.329 0 001.883 0l8-8a1.323 1.323 0 000-1.885l-7.999-8.002z"
              >
              </path>
            </svg>
          </span>
        </bolt-icon>
      </replace-with-children>
    </a>
  </bolt-link>
</h2>
`;

exports[`<bolt-headline> Component headline with icon 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  this is a headline
  <span class="c-bolt-headline__icon">
    <bolt-icon name="check">
      <span class="c-bolt-icon c-bolt-icon--check">
        <svg class="c-bolt-icon__icon"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 24 24"
        >
          <g fill="none"
             fill-rule="evenodd"
          >
            <path>
            </path>
            <path fill="var(--bolt-icon-primary-color)"
                  d="M19.292 6.29L8.998 16.584 4.703 12.29a1.004 1.004 0 00-1.412 0 1.002 1.002 0 000 1.413l5 5a.995.995 0 001.411 0l11-11a.99.99 0 000-1.413 1.001 1.001 0 00-1.41 0z"
            >
            </path>
          </g>
        </svg>
      </span>
    </bolt-icon>
  </span>
</h2>
`;

exports[`<bolt-headline> Component tag display: cite 1`] = `
<cite class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</cite>
`;

exports[`<bolt-headline> Component tag display: div 1`] = `
<div class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</div>
`;

exports[`<bolt-headline> Component tag display: h1 1`] = `
<h1 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h1>
`;

exports[`<bolt-headline> Component tag display: h2 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component tag display: h3 1`] = `
<h3 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h3>
`;

exports[`<bolt-headline> Component tag display: h4 1`] = `
<h4 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h4>
`;

exports[`<bolt-headline> Component tag display: h5 1`] = `
<h5 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h5>
`;

exports[`<bolt-headline> Component tag display: h6 1`] = `
<h6 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</h6>
`;

exports[`<bolt-headline> Component tag display: p 1`] = `
<p class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</p>
`;

exports[`<bolt-headline> Component tag display: span 1`] = `
<span class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge">
  Some text
</span>
`;

exports[`<bolt-headline> Component text alignment: center 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--center c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text alignment: left 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--left c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text alignment: right 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--right c-bolt-headline--xlarge">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: capitalize 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--capitalize">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: lowercase 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--lowercase">
  Some text
</h2>
`;

exports[`<bolt-headline> Component text casing: uppercase 1`] = `
<h2 class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xlarge c-bolt-headline--uppercase">
  Some text
</h2>
`;
